--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="primary">#0d253f</color>
+    <color name="accent">#90cea1</color>
+    <color name="primary_dark">#170859</color>
+    <color name="primary_light">#01b4e4</color>
+    <color name="grey">#dddddd</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
