--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -26,6 +26,22 @@
         <argument
             android:name="title"
             app:argType="string" />
+        <action
+            android:id="@+id/action_movies_to_details"
+            app:destination="@id/movieDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/movieDetailsFragment"
+        android:name="com.ryanrvldo.movieslibrary.ui.details.MovieDetailsFragment"
+        android:label="{title}"
+        tools:layout="@layout/fragment_movie_details">
+        <argument
+            android:name="id"
+            app:argType="integer" />
+        <argument
+            android:name="title"
+            app:argType="string" />
     </fragment>
 
 </navigation>
