--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,9 @@
     </style>
 
     <style name="Theme.MoviesLibrary" parent="Base.Theme.MoviesLibrary" />
+
+    <style name="RoundedImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8dp</item>
+    </style>
 </resources>
